# manyfold

./: .gitignore  AGENTS.md  Cargo.toml  README.md  manyfold_example_catalog.py  pyproject.toml
.github/workflows/: ci.yml  npm.yml  pypi.yml
docs/: distributed_systems_lego_catalog.md  onboarding.md  performance.md  using_manyfold.md  v1_0_0_vision.md  wasm_npm_publishing.md
docs/benchmarks/: architecture_pubsub.md  dormant_runtime.md  ipc_worker.md
docs/releases/: 0.1.1.md  0.1.10.md  0.1.11.md  0.1.12.md  0.1.13.md  0.1.14.md  0.1.15.md  0.1.16.md  0.1.17.md  0.1.18.md  0.1.2.md  0.1.23.md  0.1.24.md  0.1.25.md  0.1.26.md  0.1.27.md  0.1.28.md  0.1.29.md  0.1.30.md  0.1.31.md  0.1.32.md  0.1.35.md  0.1.36.md  0.1.37.md  0.1.38.md  0.1.39.md  0.1.40.md  0.1.41.md  0.1.5.md  0.1.6.md  0.1.7.md  0.1.8.md  0.2.0.md
docs/rfc/: implementation_checklist.md  wiregraph_rfc_rev2.md
examples/: __init__.py  _catalog.py  _exports.py  _shared.py  average_temperature.py  brightness_control.py  broadcast_mirror.py  catalog.py  closed_counter_loop.py  cross_partition_join.py  ephemeral_entropy_stream.py  imu_fusion_join.py  lazy_lidar_payload.py  mailbox_bridge.py  observe_publish.py  pipe_route.py  raft_demo.py  rate_matched_sensor.py  read_then_write_next_epoch_step.py  rolling_window_aggregate.py  runtime_substrate.py  simple_latest.py  uart_temperature_sensor.py  write_binding.py
examples/archived/: __init__.py  windowed_join.py
npm/manyfold/: README.md
proto/manyfold/v1/: wiregraph.proto
python/: manyfold_example_catalog.py
python/manyfold/: __init__.py  __init__.pyi  _repo_paths.py  _testing.py  benchmark_artifacts.py  components.py  datastream_threads.py  datastream_threads.pyi  embedded.py  graph.py  heart_benchmarks.py  jemalloc_leak_check.py  lego_catalog.py  memory_benchmarks.py  monitor_artifacts.py  native_profilers.py  primitives.py  reactive_threads.py  reactive_threads.pyi  reference_examples.py  rfc_checklist_gen.py  sensor_io.py  stats.py  stream_threads.py  stream_threads.pyi  streams.py  stub_gen.py
python/manyfold/_manyfold_rust/: __init__.pyi
python/manyfold/_rx/: __init__.py  abc.py  disposable.py  operators.py  scheduler.py  typing.py
python/manyfold/_rx/subject/: __init__.py  asyncsubject.py  behaviorsubject.py  replaysubject.py  subject.py
python/manyfold/_rx/testing/: __init__.py  marbles.py
python/manyfold/architecture/: __init__.py  callbacks.py  datastream_processor.py  locks.py  locks.pyi  observability.py  pubsub.py  pubsub.pyi  testing.py  values.py  values.pyi  workers.py
python/manyfold/architecture/native/: __init__.py  _elements.py  capacitor.py  clock.py  ground.py  pad.py  probe.py  regulator.py  relay.py  resistor.py  via.py
python/manyfold/private/: __init__.py  graph_publish.py
python/manyfold/private/profiling/: __init__.py  benchmark_baselines.py  ipc_benchmarks.py  jemalloc_leak_check.py  native_profilers.py  profile_artifacts.py  runtime_benchmarks.py
python/manyfold/rx/: __init__.py  disposable.py
python/manyfold/rx/subject/: __init__.py  behaviorsubject.py  subject.py
python/manyfold/rx/testing/: __init__.py  marbles.py
scripts/: build_wasm_npm.py
scripts/wasm_npm/: README.md
src/: core.rs  lib.rs  python_api.rs  wasm_api.rs
src/architecture/: mod.rs  observability.rs  pubsub.rs  worker.rs
src/benchmarks/: architecture_pubsub.rs  dormant_runtime.rs  ipc_echo_worker.rs
src/benchmarks/baselines/: architecture_pubsub.json  dormant_runtime.json  ipc_echo_worker.json
tests/: memory_retention_probe.py  native_zero_net_alloc.rs  test_architecture_callbacks.py  test_architecture_observability.py  test_architecture_pubsub.py  test_architecture_values.py  test_benchmark_artifacts.py  test_benchmark_baselines.py  test_components.py  test_contracts.py  test_datastream_threads.py  test_embedded.py  test_examples.py  test_graph_reactive.py  test_heart_benchmarks.py  test_ipc_benchmarks.py  test_jemalloc_leak_check.py  test_lego_catalog.py  test_mailbox_api.py  test_memory_benchmarks.py  test_monitor_artifacts.py  test_native_profilers.py  test_primitives.py  test_profile_artifacts.py  test_project_metadata.py  test_reactive_threads.py  test_reference_examples.py  test_repo_paths.py  test_rfc_checklist_gen.py  test_runtime_benchmarks.py  test_runtime_substrate.py  test_rx_facade.py  test_sensor_io.py  test_stats.py  test_stream_threads.py  test_stub_gen.py  test_support.py  test_test_support.py
