[package]
name = "manyfold"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "manyfold"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub-gen"]

[features]
default = []
python = ["dep:pyo3"]
python-extension = ["python", "pyo3/extension-module"]
stub-gen = ["python", "pyo3/auto-initialize", "dep:pyo3-stub-gen"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py310"], optional = true }
pyo3-stub-gen = { version = "=0.18.0", optional = true }
pyo3-stub-gen-derive = "=0.18.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
