[package]
name = "manyfold"
version = "0.1.38"
edition = "2021"
description = "PyO3-backed Manyfold RFC scaffolding and in-memory runtime."
license = "AGPL-3.0-only"
repository = "https://github.com/Organization5762/manyfold"
homepage = "https://github.com/Organization5762/manyfold"
publish = false

[lib]
name = "manyfold"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub-gen"]

[[bin]]
name = "memory_retention_benchmark"
path = "src/bin/retention_stress.rs"

[[bin]]
name = "dormant_runtime_benchmark"
path = "src/bin/dormant_runtime_benchmark.rs"

[features]
coz-profiler = ["dep:coz"]
default = []
python = ["dep:pyo3"]
python-extension = ["pyo3/extension-module", "python"]
stub-gen = ["dep:pyo3-stub-gen", "pyo3/auto-initialize", "python"]

[dependencies]
coz = { version = "0.1.3", optional = true }
libc = "0.2"
pyo3 = { version = "0.28.2", features = ["abi3-py310"], optional = true }
pyo3-stub-gen = { version = "=0.18.0", optional = true }
pyo3-stub-gen-derive = "=0.18.0"
serde = { version = "1.0", features = ["derive"] }
sqlparser = "=0.50.0"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
debug = "line-tables-only"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
