[package]
name = "manyfold"
version = "0.1.41"
edition = "2021"
description = "PyO3-backed Manyfold RFC scaffolding and in-memory runtime."
license = "AGPL-3.0-only"
repository = "https://github.com/Organization5762/manyfold"
homepage = "https://github.com/Organization5762/manyfold"

[lib]
name = "manyfold"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub-gen"]

[[bin]]
name = "memory_retention_benchmark"
path = "src/bin/retention_stress.rs"

[[bin]]
name = "dormant_runtime_benchmark"
path = "src/benchmarks/dormant_runtime.rs"

[[bin]]
name = "architecture_pubsub_benchmark"
path = "src/benchmarks/architecture_pubsub.rs"

[[bin]]
name = "ipc_echo_worker"
path = "src/benchmarks/ipc_echo_worker.rs"

[features]
coz-profiler = ["dep:coz"]
default = []
python = ["dep:fs2", "dep:pyo3", "dep:rusqlite"]
python-extension = ["pyo3/extension-module", "python"]
stub-gen = ["dep:pyo3-stub-gen", "pyo3/auto-initialize", "python"]
wasm = ["dep:js-sys", "dep:wasm-bindgen"]

[dependencies]
coz = { version = "0.1.3", optional = true }
fs2 = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
libc = "0.2"
pyo3 = { version = "0.28.2", features = ["abi3-py310"], optional = true }
pyo3-stub-gen = { version = "=0.18.0", optional = true }
pyo3-stub-gen-derive = "=0.18.0"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
sqlparser = "=0.50.0"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
debug = "line-tables-only"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
