[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "manyfold"
version = "0.1.2"
description = "PyO3-backed Manyfold RFC scaffolding and in-memory runtime."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Manyfold contributors" }]
keywords = [
    "reactive",
    "runtime",
    "streaming",
    "pyo3",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dependencies = [
    "reactivex==5.0.0a2",
]

[project.urls]
Homepage = "https://github.com/Organization5762/manyfold"
Repository = "https://github.com/Organization5762/manyfold"
Issues = "https://github.com/Organization5762/manyfold/issues"

[project.scripts]
manyfold-rfc-checklist = "manyfold.rfc_checklist_gen:main"
manyfold-example-catalog = "manyfold_example_catalog:main"

[tool.maturin]
features = ["python-extension"]
module-name = "manyfold._manyfold_rust"
profile = "release"
python-source = "python"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]

[tool.ruff.lint.per-file-ignores]
"python/manyfold/reference_examples.py" = ["E402"]
"python/manyfold/rfc_checklist_gen.py" = ["E402"]

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
