[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "manyfold"
version = "0.1.40"
description = "PyO3-backed Manyfold RFC scaffolding and in-memory runtime."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Manyfold contributors" }]
keywords = [
    "pyo3",
    "reactive",
    "runtime",
    "streaming",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/Organization5762/manyfold"
Issues = "https://github.com/Organization5762/manyfold/issues"
Repository = "https://github.com/Organization5762/manyfold"

[project.scripts]
manyfold-benchmark-baselines-check = "manyfold.private.profiling.benchmark_baselines:_main"
manyfold-benchmark-log-verify = "manyfold.benchmark_artifacts:_main"
manyfold-example-catalog = "manyfold_example_catalog:_main"
manyfold-heart-benchmark = "manyfold.heart_benchmarks:_main"
manyfold-heart-monitor-verify = "manyfold.heart_benchmarks:_verify_main"
manyfold-ipc-benchmark = "manyfold.private.profiling.ipc_benchmarks:_main"
manyfold-jemalloc-leak-check = "manyfold.private.profiling.jemalloc_leak_check:_main"
manyfold-jemalloc-verify = "manyfold.private.profiling.jemalloc_leak_check:_verify_main"
manyfold-memory-benchmark = "manyfold.memory_benchmarks:_main"
manyfold-monitor-verify = "manyfold.monitor_artifacts:_main"
manyfold-native-profiler = "manyfold.private.profiling.native_profilers:_main"
manyfold-native-profiler-verify = "manyfold.private.profiling.native_profilers:_verify_main"
manyfold-profile-artifact-verify = "manyfold.private.profiling.profile_artifacts:_main"
manyfold-rfc-checklist = "manyfold.rfc_checklist_gen:_main"
manyfold-runtime-benchmark = "manyfold.private.profiling.runtime_benchmarks:_main"

[tool.maturin]
features = ["python-extension"]
module-name = "manyfold._manyfold_rust"
profile = "release"
python-source = "python"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]

[tool.ruff.lint.per-file-ignores]
"python/manyfold/reference_examples.py" = ["E402"]
"python/manyfold/rfc_checklist_gen.py" = ["E402"]

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "tomli>=2.0.0; python_version < '3.11'",
]
